--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -4,17 +4,18 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: 
+          - ubuntu-latest
+          - windows-latest
+          - macos-latest
         py-version:
           - 3.7
           - 3.8
           - 3.9
 
-
-        
     steps:
     - name: Set up Python
       uses: actions/setup-python@v4
