--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -13,9 +13,12 @@ jobs:
           - macos-latest
         py-version:
           - 3.7
-          - 3.8
+          - 3.8 
           - 3.9
-
+        exclude:
+          - os: macos-latest
+            py-version: 3.9
+      
     steps:
     - name: Set up Python
       uses: actions/setup-python@v4
